Fix sidebar z-index issue

--- a/client/components/sidebar/sidebar.css
+++ b/client/components/sidebar/sidebar.css
@@ -115,6 +115,7 @@
 .board-sidebar {
   display: none;
   width: 30vw;
+  z-index: 100;
   transition: top 0.1s, right 0.1s, width 0.1s;
 }
 .board-sidebar.is-open {
